force fs_basepath/fs_homepath to "." so dll loading works properly

--- a/misc/msvc12/cgame.vcxproj
+++ b/misc/msvc12/cgame.vcxproj
@@ -166,7 +166,7 @@
     </ResourceCompile>
     <Link>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>$(OutDir)cgamex86.dll</OutputFile>
+      <OutputFile>$(SolutionDir)..\..\..\quake3\baseq3\cgamex86.dll</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <ModuleDefinitionFile>.\cgame.def</ModuleDefinitionFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
