convert some headers/code to C++ for cm_trace.cpp

--- a/misc/msvc12/quake3.vcxproj.filters
+++ b/misc/msvc12/quake3.vcxproj.filters
@@ -639,9 +639,6 @@
     <ClCompile Include="..\..\code\qcommon\cm_test.c">
       <Filter>qcommon</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\code\qcommon\cm_trace.c">
-      <Filter>qcommon</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\code\qcommon\cmd.c">
       <Filter>qcommon</Filter>
     </ClCompile>
@@ -773,6 +770,9 @@
     </ClCompile>
     <ClCompile Include="..\..\code\imgui\imgui_api.cpp">
       <Filter>imgui</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\code\qcommon\cm_trace.cpp">
+      <Filter>qcommon</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
